--- a/water-my-plants/package.json
+++ b/water-my-plants/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "install": "^0.13.0",
     "npm": "^7.7.0",
