--- a/water-my-plants/package.json
+++ b/water-my-plants/package.json
@@ -11,6 +11,7 @@
     "install": "^0.13.0",
     "npm": "^7.7.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
